RESOLVED FIXED262550
[WebGPU] Bind group layout with multiple external textures does not work
https://bugs.webkit.org/show_bug.cgi?id=262550
Summary [WebGPU] Bind group layout with multiple external textures does not work
Mike Wyrzykowski
Reported 2023-10-03 08:45:42 PDT
The bind group generation assumes bindGroupEntry.index == index in the argument buffer, but external textures take four slots in the argument buffer. So an external texture anywhere but the very end will be problematic
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-03 08:46:02 PDT
Mike Wyrzykowski
Comment 2 2023-10-03 13:29:51 PDT
EWS
Comment 3 2023-10-04 11:58:09 PDT
Committed 268860@main (b43510eeb362): <https://commits.webkit.org/268860@main> Reviewed commits have been landed. Closing PR #18575 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.