[WebGPU] Bind group layout with multiple external textures does not work https://bugs.webkit.org/show_bug.cgi?id=262550 <radar://116403353>

Reviewed by Dan Glastonbury.

When external textures are used, they can expand to more than one bind slot
per source, so binding.index != (not necessarily) [id(k)].

Build a mapping and pass it to the compiler. The reverse we don't yet need,
since the bind group layout returned from the compiler breaks down the external
texture into its subcomponents.

* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):
* Source/WebGPU/WebGPU/BindGroupLayout.h:
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::Device::createBindGroupLayout):
(WebGPU::BindGroupLayout::argumentBufferIndexForEntryIndex const):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::addPipelineLayouts):
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::convertPipelineLayout):

Canonical link: https://commits.webkit.org/268860@main