Source/WebGPU/WebGPU/BindGroupLayout.mm
@@ -126,24 +126,6 @@ static MTLArgumentDescriptor *createArgumentDescriptor(const WGPUStorageTextureB
     return descriptor;
 }
 
-bool BindGroupLayout::isPresent(const WGPUExternalTextureBindingLayout&)
-{
-    return true;
-}
-
-static MTLArgumentDescriptor *createArgumentDescriptor(const WGPUExternalTextureBindingLayout& externalTexture)
-{
-    if (externalTexture.nextInChain)
-        return nil;
-
-    // FIXME: Implement this properly.
-    // External textures have a bunch of information included in them, not just a single texture.
-    auto descriptor = [MTLArgumentDescriptor new];
-    descriptor.dataType = MTLDataTypeTexture;
-    descriptor.access = BindGroupLayout::BindingAccessReadOnly;
-    return descriptor;
-}
-
 static void addDescriptor(NSMutableArray<MTLArgumentDescriptor *> *arguments, MTLArgumentDescriptor *descriptor, NSUInteger index)
 {
     MTLArgumentDescriptor *stageDescriptor = [descriptor copy];
@@ -169,10 +151,16 @@ Ref<BindGroupLayout> Device::createBindGroupLayout(const WGPUBindGroupLayoutDesc
     for (uint32_t i = 0; i < stageCount; ++i)
         arguments[i] = [NSMutableArray arrayWithCapacity:descriptor.entryCount];
 
+    Vector<WGPUBindGroupLayoutEntry> descriptorEntries(descriptor.entries, descriptor.entryCount);
+    std::sort(descriptorEntries.begin(), descriptorEntries.end(), [](const WGPUBindGroupLayoutEntry& a, const WGPUBindGroupLayoutEntry& b) {
+        return a.binding < b.binding;
+    });
+
+    constexpr ShaderStage stages[] = { ShaderStage::Vertex, ShaderStage::Fragment, ShaderStage::Compute };
     BindGroupLayout::EntriesContainer bindGroupLayoutEntries;
     size_t sizeOfDynamicOffsets[stageCount] = { 0, 0, 0 };
-    for (uint32_t i = 0; i < descriptor.entryCount; ++i) {
-        const WGPUBindGroupLayoutEntry& entry = descriptor.entries[i];
+    uint32_t bindingOffset[stageCount] = { 0, 0, 0 };
+    for (auto& entry : descriptorEntries) {
         if (entry.nextInChain) {
             if (entry.nextInChain->sType != static_cast<WGPUSType>(WGPUSTypeExtended_BindGroupLayoutEntryExternalTexture))
                 return BindGroupLayout::createInvalid(*this);
@@ -180,47 +168,70 @@ Ref<BindGroupLayout> Device::createBindGroupLayout(const WGPUBindGroupLayoutDesc
                 return BindGroupLayout::createInvalid(*this);
         }
 
-        MTLArgumentDescriptor *descriptor = nil;
+        bool isExternalTexture = false;
+        constexpr int maxGeneratedDescriptors = 4;
+        MTLArgumentDescriptor *descriptors[maxGeneratedDescriptors] = { nil, nil, nil, nil };
         BindGroupLayout::Entry::BindingLayout bindingLayout;
         auto processBindingLayout = [&](const auto& type) {
             if (!BindGroupLayout::isPresent(type))
                 return true;
-            if (descriptor)
+            if (descriptors[0])
                 return false;
-            descriptor = createArgumentDescriptor(type);
-            if (!descriptor)
+            descriptors[0] = createArgumentDescriptor(type);
+            if (!descriptors[0])
                 return false;
             bindingLayout = type;
             return true;
         };
-        if (!processBindingLayout(entry.buffer))
-            return BindGroupLayout::createInvalid(*this);
-        if (!processBindingLayout(entry.sampler))
-            return BindGroupLayout::createInvalid(*this);
-        if (!processBindingLayout(entry.texture))
-            return BindGroupLayout::createInvalid(*this);
-        if (!processBindingLayout(entry.storageTexture))
-            return BindGroupLayout::createInvalid(*this);
-        if (entry.nextInChain) {
-            const WGPUExternalTextureBindGroupLayoutEntry& externalTextureEntry = *reinterpret_cast<const WGPUExternalTextureBindGroupLayoutEntry*>(entry.nextInChain);
-            ASSERT(externalTextureEntry.chain.sType == static_cast<WGPUSType>(WGPUSTypeExtended_BindGroupLayoutEntryExternalTexture));
-            processBindingLayout(entry.storageTexture);
-            if (!processBindingLayout(externalTextureEntry.externalTexture))
+        if (entry.texture.sampleType == WGPUTextureSampleType_ExternalTexture) {
+            isExternalTexture = true;
+            descriptors[0] = createArgumentDescriptor(entry.texture);
+            descriptors[1] = createArgumentDescriptor(entry.texture);
+            WGPUBufferBindingLayout bufferLayout {
+                .nextInChain = nullptr,
+                .type = static_cast<WGPUBufferBindingType>(WGPUBufferBindingType_Float3x2),
+                .hasDynamicOffset = static_cast<WGPUBool>(false),
+                .minBindingSize = 0
+            };
+            descriptors[2] = createArgumentDescriptor(bufferLayout);
+            bufferLayout.type = static_cast<WGPUBufferBindingType>(WGPUBufferBindingType_Float4x3);
+            descriptors[3] = createArgumentDescriptor(bufferLayout);
+            bindingLayout = WGPUExternalTextureBindingLayout();
+        } else {
+            if (!processBindingLayout(entry.buffer))
+                return BindGroupLayout::createInvalid(*this);
+            if (!processBindingLayout(entry.sampler))
+                return BindGroupLayout::createInvalid(*this);
+            if (!processBindingLayout(entry.texture))
+                return BindGroupLayout::createInvalid(*this);
+            if (!processBindingLayout(entry.storageTexture))
                 return BindGroupLayout::createInvalid(*this);
         }
 
-        if (!descriptor)
+        if (!descriptors[0])
             return BindGroupLayout::createInvalid(*this);
 
-        std::optional<uint32_t> dynamicOffsets[stageCount] = { std::nullopt, std::nullopt, std::nullopt };
+        std::optional<uint32_t> dynamicOffsets[stageCount];
+        BindGroupLayout::ArgumentBufferIndices argumentBufferIndices;
         for (uint32_t stage = 0; stage < stageCount; ++stage) {
             if (containsStage(entry.visibility, stage)) {
-                indicesForBinding.add(makeKey(entry.binding, stage), descriptor.access);
-                addDescriptor(arguments[stage], descriptor, entry.binding);
+                indicesForBinding.add(makeKey(entry.binding, stage), descriptors[0].access);
+                auto renderStage = stages[stage];
+                argumentBufferIndices[renderStage] = entry.binding + bindingOffset[stage];
                 if (entry.buffer.hasDynamicOffset) {
                     dynamicOffsets[stage] = sizeOfDynamicOffsets[stage];
                     sizeOfDynamicOffsets[stage] += sizeof(uint32_t);
                 }
+
+                for (int descriptorIndex = 0; descriptorIndex < maxGeneratedDescriptors; ++descriptorIndex) {
+                    if (MTLArgumentDescriptor *descriptor = descriptors[descriptorIndex])
+                        addDescriptor(arguments[stage], descriptor, *argumentBufferIndices[renderStage] + descriptorIndex);
+                    else
+                        break;
+                }
+
+                if (isExternalTexture)
+                    bindingOffset[stage] += maxGeneratedDescriptors;
             }
         }
 
@@ -228,6 +239,7 @@ Ref<BindGroupLayout> Device::createBindGroupLayout(const WGPUBindGroupLayoutDesc
             entry.binding,
             entry.visibility,
             WTFMove(bindingLayout),
+            WTFMove(argumentBufferIndices),
             WTFMove(dynamicOffsets[0]),
             WTFMove(dynamicOffsets[1]),
             WTFMove(dynamicOffsets[2])
@@ -237,15 +249,7 @@ Ref<BindGroupLayout> Device::createBindGroupLayout(const WGPUBindGroupLayoutDesc
     auto label = fromAPI(descriptor.label);
     id<MTLArgumentEncoder> argumentEncoders[stageCount];
     for (size_t stage = 0; stage < stageCount; ++stage) {
-        NSArray<MTLArgumentDescriptor *> *sortedArray = [arguments[stage] sortedArrayUsingComparator:^NSComparisonResult(MTLArgumentDescriptor *a, MTLArgumentDescriptor *b) {
-            if (a.index < b.index)
-                return NSOrderedAscending;
-            if (a.index == b.index)
-                return NSOrderedSame;
-
-            return NSOrderedDescending;
-        }];
-        argumentEncoders[stage] = arguments[stage].count ? [m_device newArgumentEncoderWithArguments:sortedArray] : nil;
+        argumentEncoders[stage] = arguments[stage].count ? [m_device newArgumentEncoderWithArguments:arguments[stage]] : nil;
         argumentEncoders[stage].label = label;
         if (arguments[stage].count && !argumentEncoders[stage])
             return BindGroupLayout::createInvalid(*this);
@@ -315,6 +319,16 @@ uint32_t BindGroupLayout::sizeOfFragmentDynamicOffsets() const
 uint32_t BindGroupLayout::sizeOfComputeDynamicOffsets() const
 {
     return m_sizeOfComputeDynamicOffsets;
+}
+
+NSUInteger BindGroupLayout::argumentBufferIndexForEntryIndex(uint32_t bindingIndex, ShaderStage renderStage) const
+{
+    if (auto it = m_bindGroupLayoutEntries.find(bindingIndex); it != m_bindGroupLayoutEntries.end()) {
+        auto result = it->value.argumentBufferIndices[renderStage];
+        return result ? *result : NSNotFound;
+    }
+
+    return NSNotFound;
 }
 
 } // namespace WebGPU
